# kit

./: .gitignore  Cargo.toml  Contracts.toml  README.md  build.rs
.github/workflows/: build_and_test.yml
contracts/: ERC1967Proxy.json  HyperAccount.json  HyperAccount9CharCommitMinter.json  HyperAccountMinter.json  HyperAccountPermissionedMinter.json  Hypermap.json
src/: Contracts.toml  lib.rs  logging.rs  main.rs
src/boot_fake_node/: mod.rs
src/boot_real_node/: mod.rs
src/build_start_package/: mod.rs
src/chain/: mod.rs  readme.md
src/chain/bytecode/: deploy-hyperaccount-9char-commit-minter.txt  deploy-hyperaccount-minter.txt  deploy-hyperaccount-permissioned-minter-2.txt  deploy-hyperaccount-permissioned-minter.txt  hyperaccount.txt  hypermap.txt  mint-os.txt
src/check/: mod.rs
src/clean/: mod.rs
src/dev_ui/: mod.rs
src/new/: mod.rs
src/new/templates/: tests.toml
src/new/templates/javascript/no-ui/chat/test/: tests.toml
src/new/templates/python/no-ui/echo/test/: tests.toml
src/new/templates/python/no-ui/fibonacci/test/: tests.toml
src/new/templates/rust/no-ui/blank/blank/: Cargo.toml
src/new/templates/rust/no-ui/chat/chat/: Cargo.toml
src/new/templates/rust/no-ui/chat/send/: Cargo.toml
src/new/templates/rust/no-ui/chat/test/: tests.toml
src/new/templates/rust/no-ui/echo/echo/: Cargo.toml
src/new/templates/rust/no-ui/echo/test/: tests.toml
src/new/templates/rust/no-ui/fibonacci/fibonacci/: Cargo.toml
src/new/templates/rust/no-ui/fibonacci/number/: Cargo.toml
src/new/templates/rust/no-ui/fibonacci/test/: tests.toml
src/new/templates/rust/no-ui/file-transfer/download/: Cargo.toml
src/new/templates/rust/no-ui/file-transfer/file-transfer/: Cargo.toml
src/new/templates/rust/no-ui/file-transfer/file-transfer-worker/: Cargo.toml
src/new/templates/rust/no-ui/file-transfer/file-transfer-worker-api/: Cargo.toml
src/new/templates/rust/no-ui/file-transfer/list-files/: Cargo.toml
src/new/templates/rust/no-ui/file-transfer/test/: tests.toml
src/new/templates/rust/no-ui/hyperapp-echo/: .gitignore  Cargo.toml  metadata.json
src/new/templates/rust/no-ui/hyperapp-echo/hyperapp-echo/: Cargo.toml
src/new/templates/rust/no-ui/hyperapp-echo/hyperapp-echo/src/: lib.rs
src/new/templates/rust/no-ui/hyperapp-echo/pkg/: manifest.json
src/new/templates/rust/no-ui/hyperapp-echo/test/: tests.toml
src/new/templates/rust/no-ui/hyperapp-echo/test/hyperapp-echo-test/hyper-app-echo-test/: Cargo.toml
src/new/templates/rust/no-ui/hyperapp-echo/test/hyperapp-echo-test/hyper-app-echo-test/src/: lib.rs  tester_lib.rs
src/new/templates/rust/no-ui/hyperapp-echo/test/hyperapp-echo-test/hyperapp-echo-test/: Cargo.toml
src/new/templates/rust/no-ui/hyperapp-echo/test/hyperapp-echo-test/hyperapp-echo-test/src/: lib.rs  tester_lib.rs
src/new/templates/rust/no-ui/hypr-echo/: Cargo.toml  metadata.json
src/new/templates/rust/no-ui/hypr-echo/hypr-echo/: Cargo.toml
src/new/templates/rust/no-ui/hypr-echo/hypr-echo/src/: lib.rs
src/new/templates/rust/no-ui/hypr-echo/pkg/: manifest.json
src/new/templates/rust/no-ui/hypr-echo/test/: tests.toml
src/new/templates/rust/ui/chat/chat/: Cargo.toml
src/new/templates/rust/ui/framework-process/: Cargo.toml  metadata.json
src/new/templates/rust/ui/framework-process/framework-process/: Cargo.toml
src/new/templates/rust/ui/framework-process/pkg/: manifest.json
src/new/templates/rust/ui/framework-process/test/: tests.toml
src/new/templates/rust/ui/framework-process/test/framework-process-test/framework-process-test/: Cargo.toml
src/new/templates/rust/ui/framework-process/test/framework-process-test/framework-process-test/src/: lib.rs
src/new/templates/rust/ui/hyperapp/: Cargo.toml
src/new/templates/rust/ui/hyperapp-skeleton/: Cargo.toml  README.md  metadata.json
src/new/templates/rust/ui/hyperapp-skeleton/api/: app.wit  skeleton-app-dot-os-v0.wit  types-skeleton-app-dot-os-v0.wit
src/new/templates/rust/ui/hyperapp-skeleton/example-apps/file-explorer/explorer/: Cargo.toml
src/new/templates/rust/ui/hyperapp-skeleton/example-apps/file-explorer/explorer/src/: lib.rs
src/new/templates/rust/ui/hyperapp-skeleton/example-apps/id/id/: Cargo.toml
src/new/templates/rust/ui/hyperapp-skeleton/example-apps/id/id/src/: lib.rs
src/new/templates/rust/ui/hyperapp-skeleton/example-apps/sign/sign/: Cargo.toml
src/new/templates/rust/ui/hyperapp-skeleton/example-apps/sign/sign/src/: lib.rs
src/new/templates/rust/ui/hyperapp-skeleton/hyperapp-skeleton/: Cargo.toml
src/new/templates/rust/ui/hyperapp-skeleton/hyperapp-skeleton/src/: lib.rs
src/new/templates/rust/ui/hyperapp-skeleton/pkg/: manifest.json
src/new/templates/rust/ui/hyperapp-skeleton/skeleton-app/: Cargo.toml
src/new/templates/rust/ui/hyperapp-skeleton/test/: tests.toml
src/new/templates/rust/ui/hyperapp-todo/: .gitignore  Cargo.toml  metadata.json
src/new/templates/rust/ui/hyperapp-todo/hyperapp-todo/: Cargo.toml
src/new/templates/rust/ui/hyperapp-todo/pkg/: manifest.json
src/new/templates/rust/ui/hyperapp-todo/test/: tests.toml
src/new/templates/rust/ui/llm-template/: Cargo.toml  metadata.json
src/new/templates/rust/ui/llm-template/api/: llm-template:template.os-v0.wit
src/new/templates/rust/ui/llm-template/llm-template/: Cargo.toml
src/new/templates/rust/ui/llm-template/pkg/: manifest.json
src/new/templates/rust/ui/llm-template/resources/: frontendSetup.md  keyValueAPI.md  sqlite.md  vfsAPI.md
src/new/templates/rust/ui/llm-template/shared-types/: Cargo.toml
src/new/templates/rust/ui/llm-template/test/: tests.toml
src/new/templates/ui/chat/ui/: package.json
src/new/templates/ui/framework-process/ui/: index.html
src/new/templates/ui/framework-process/ui/src/: App.css  App.tsx
src/new/templates/ui/hyperapp-skeleton/ui/: index.html  package-lock.json  package.json
src/new/templates/ui/hyperapp-skeleton/ui/src/: App.tsx
src/new/templates/ui/llm-template/ui/: index.html
src/publish/: mod.rs
src/run_tests/: cleanup.rs  mod.rs  types.rs
src/setup/: mod.rs
src/start_package/: mod.rs
(+95 files in other folders)
