[dependencies]
anyhow = "1.0"
hyperapp_macro = "0.2.0"
process_macros = "0.1"
serde_json = "1.0"
wit-bindgen = "0.42.1"

[dependencies.hyperapp_skeleton_caller_utils]
optional = true
path = "../target/hyperapp-skeleton-caller-utils"

[dependencies.hyperware_process_lib]
version = "3.0.0"
features = ["hyperapp"]

[dependencies.serde]
features = ["derive"]
version = "1.0"

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "hyperapp-skeleton"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
