[dependencies]
anyhow = "1.0.97"
hyperapp_macro = "0.1.1"
process_macros = "0.1"
rmp-serde = "1.1.2"
serde_json = "1.0"
wit-bindgen = "0.36.0"

[dependencies.caller-utils]
path = "../target/caller-utils"

[dependencies.hyperware_process_lib]
version = "2.2.0"
features = ["hyperapp"]

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "sign"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
