[dependencies]
anyhow = "1.0.97"
hyperapp_macro = "0.2.0"
process_macros = "0.1"
rmp-serde = "1.1.2"
serde_json = "1.0"
wit-bindgen = "0.42.1"

[dependencies.hyperware_process_lib]
features = ["hyperapp"]
version = "3.0.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.sign_caller_utils]
optional = true
path = "../target/sign-caller-utils"

[features]
caller-utils = ["sign_caller_utils"]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "sign"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
